--- a/website/templates/base/_common_script.html
+++ b/website/templates/base/_common_script.html
@@ -87,9 +87,12 @@
 	
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.tmpl.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jsrender.js"></script>{% endaddtoblock %}
-	
-	{% addtoblock "js-post" %}<!--<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.history.js"></script>-->{% endaddtoblock %}
-	
+
+
+	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.history.js"></script>{% endaddtoblock %}
+	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/history.js"></script>{% endaddtoblock %}
+
+
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/bootstrap/bootstrap-tooltip.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/bootstrap/bootstrap-popover.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/bootstrap/bootstrap-tab.js"></script>{% endaddtoblock %}
@@ -98,9 +101,7 @@
 	
 	
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/ICanHaz.js"></script>{% endaddtoblock %}
-	
-	{% addtoblock "js-post" %}<!--<script type="text/javascript" src="{{ STATIC_URL }}js/history.js"></script>-->{% endaddtoblock %}
-	
+
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/pagedown/Markdown.Converter.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/pagedown/Markdown.Sanitizer.js"></script>{% endaddtoblock %}
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/pagedown/Markdown.Editor.js"></script>{% endaddtoblock %}
