--- a/website/apps/alibrary/templates/alibrary/media/list_item_m.html
+++ b/website/apps/alibrary/templates/alibrary/media/list_item_m.html
@@ -9,7 +9,7 @@
 	<div class="list_body_item c1 image_center_bg" {% if item.main_image %}style="background-image: url({% thumbnail item.main_image 54x54 crop upscale subject_location=item.main_image.subject_location %});"{% endif %}>
 		<ul class="unstyled">
 			<li class="play">
-				<a href="{{ item.get_api_url }}#0#replace" title="Play" class="playable popup"><img src="/static/img/base/spacer.png" width="16" height="16" alt="Play" /></a>
+				<a href="{{ item.release.get_api_url }}#{{ forloop.counter0 }}#replace" data-ct="media_set" title="{% trans "Play" %}" class="playable popup"><img src="/static/img/base/spacer.png" width="16" height="16" alt="{% trans "Play" %}"></a>
 			</li>
 		</ul>
 	</div>
