--- a/website/apps/alibrary/templates/alibrary/playlist_list.html
+++ b/website/apps/alibrary/templates/alibrary/playlist_list.html
@@ -1,12 +1,34 @@
 {% extends "layout_base.html" %}
-{% load spurl cache i18n truncate cache %}
+{% load spurl cache i18n truncate cache dajaxice_templatetags sekizai_tags %}
 
 {% block heading %}
-<!-- heading / icon (large one) -->
-<div id="heading">
-	{% include "skeleton/heading.html" %}
-</div>
-<!-- heading / icon (large one) -->
+    <!-- view specific scripts -->
+    {% addtoblock "js-post" %}{% dajaxice_js_import %}{% endaddtoblock %}
+    {% addtoblock "js-post" %}
+        <script type="text/javascript" src="{{ STATIC_URL }}alibrary/js/list.edit.js"></script>{% endaddtoblock %}
+    {% addtoblock "js-post" %}
+        <script type="text/javascript" src="{{ STATIC_URL }}exporter/js/base.js"></script>{% endaddtoblock %}
+
+    {% addtoblock "js-post" %}
+        <script>
+            var list_edit = list_edit || {};
+            $(function () {
+                list_edit = new ListEditUi();
+                list_edit.init();
+
+                exporter = new ExporterApp();
+                exporter.init();
+
+            });
+        </script>
+    {% endaddtoblock %}
+
+
+    <!-- heading / icon (large one) -->
+    <div id="heading">
+        {% include "skeleton/heading.html" %}
+    </div>
+    <!-- heading / icon (large one) -->
 {% endblock %}
 
 {% block modnav %}
