--- a/website/apps/alibrary/templates/alibrary/release_list.html
+++ b/website/apps/alibrary/templates/alibrary/release_list.html
@@ -17,6 +17,7 @@
                 list_edit.init();
 
                 exporter = new ExporterApp();
+                exporter.api_url = '{% url api_dispatch_list resource_name='export' api_name='v1'%}';
                 exporter.init();
 
             });
