--- a/website/apps/exporter/templates/exporter/_export_list_sidebar.html
+++ b/website/apps/exporter/templates/exporter/_export_list_sidebar.html
@@ -6,7 +6,14 @@
 		<h2>{% trans "Status" %} <small>{% trans "current server load" %}</small></h2>
 	</div>
 
-	<div class="status item">
+
+
+
+	<div class="status item" id="istats_container"><!-- dynamic content --></div>
+
+
+    <!--
+	<div class="status item" >
 		<h4><i class="icon-tasks"></i> {% trans "Files in Queue" %}</h4>
 		<div class="row-fluid ">
 			<div class="span3">
@@ -17,6 +24,6 @@
 			</div>
 		</div>
 	</div>
-
+    -->
 
 </div>
