--- a/website/apps/exporter/templates/exporter/export_list.html
+++ b/website/apps/exporter/templates/exporter/export_list.html
@@ -1,99 +1,91 @@
-{% extends "base/listing.html" %}
+{% extends "base/generic.html" %}
 
-{% load i18n webdesign sekizai_tags include_raw %}
+{% load i18n sekizai_tags pushy_tags istats_tags %}
 
 {% block object_type %}export{% endblock %}
 
 
 {% block heading %} <!-- heading / icon (large one) -->
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/ICanHaz.js"></script>{% endaddtoblock %}
-{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}exporter/js/base.js"></script>{% endaddtoblock %}
+    {% addtoblock "js-post" %}{% pushy_scripts %}{% endaddtoblock %}
+    {% addtoblock "js-post" %}{% istats_scripts %}{% endaddtoblock %}
+    {% addtoblock "js-post" %}
+        <script type="text/javascript" src="{{ STATIC_URL }}js/lib/ICanHaz.js"></script>{% endaddtoblock %}
+    {% addtoblock "js-post" %}
+        <script type="text/javascript" src="{{ STATIC_URL }}exporter/js/base.js"></script>{% endaddtoblock %}
 
-{% addtoblock "js-post" %}
-<script type="text/javascript">
+    {% addtoblock "js-post" %}
+        <script type="text/javascript">
 
-$(document).ready(function() {
-	
-	
-	$(function () {
-		
-		var exporter = exporter || {};
-		exporter.base = exporter.base || {};
-		exporter.ui = exporter.ui || {};
+            $(document).ready(function () {
 
-		exporter.ui = new ExporterUi();
-		exporter.ui.api_url = "{% url api_dispatch_list resource_name='export' api_name='v1'%}{{ object.id }}";
+                $(function () {
+                    exporter = new ExporterMain();
+                    exporter.api_url = "{% url api_dispatch_list resource_name='export' api_name='v1'%}";
+                    exporter.pushy_key = "{{ request.user.profile.uuid }}";
+                    exporter.init();
+                });
+            });
+        </script>
+    {% endaddtoblock %}
 
-	   
-	   exporter.ui.init();
-	
-
-	
-	});
-});
-</script>
-
-<script id="tpl_export" type="text/html">
-	{% include_raw "exporter/tpl_export.html" %}
-</script>
-
-{% endaddtoblock %}
-
-<div id="heading">
-	{% include "skeleton/heading.html" %}
-</div>
-<!-- heading / icon (large one) -->
+    <div id="heading">
+        {% include "skeleton/heading.html" %}
+    </div>
+    <!-- heading / icon (large one) -->
 {% endblock %}
 
 
-{% block pre_list %}
-<section>
-	
-	<div class="page-header">
-		<h2>{% trans "Your Downloads" %} <small>{% trans "Please note that listed items older than 10 days will get removed automatically." %}</small></h2>
-	</div>
-	<div>
-		<p>{% trans "Below you can find items you have marked for download. The corresponding files are being processed in the background – this can take a (short) while. " %}</p>
-		<p>{% trans "As soon as a download item is ready, the \"Download\" link turns active and you can start to download it by clicking on the link." %}</p>
-	</div>
-	
-	<!-- Notification enabler -->
-	<div class="util notify enable" style="display: none;">
-		<a class="btn btn-secondary btn" href="#">
-			<i class="icon-tasks icon-white"></i>
-			<span> {% trans "Enable Desktop Notifications" %}</span>
-		</a>
-	</div>
-	
-	
-</section>
+{% block pre_body %}
+    <section>
+
+        <div class="page-header">
+            <h2>{% trans "Your Downloads" %}
+                <small>{% trans "Please note that listed items older than 10 days will get removed automatically." %}</small>
+            </h2>
+        </div>
+        <div>
+            <p>{% trans "Below you can find items you have marked for download. The corresponding files are being processed in the background – this can take a (short) while. " %}</p>
+
+            <p>{% trans "As soon as a download item is ready, the \"Download\" link turns active and you can start to download it by clicking on the link." %}</p>
+        </div>
+
+        <!-- Notification enabler -->
+        <div class="util notify enable" style="display: none;">
+            <a class="btn btn-secondary btn" href="#">
+                <i class="icon-tasks icon-white"></i>
+                <span> {% trans "Enable Desktop Notifications" %}</span>
+            </a>
+        </div>
+
+
+    </section>
 {% endblock %}
 
 {% block list_inner %}
 
-<table class="table table-condensed table-striped">
-	
+    <table class="table table-condensed table-striped">
 
-	<thead>
-		<tr>
-			<th>&nbsp;</th>
-			<th>{% trans "Name" %}</th>
-			<th>{% trans "Queue Time" %}</th>
-			<th>{% trans "Last Download" %}</th>
-			<th>{% trans "Size" %}</th>
-			<th>{% trans "Link" %}</th>
-			<th>{% trans "Actions" %}</th>
-		</tr>
-	</thead>
 
-	<tbody id="export_list_holder">
-	<!-- CONTENT INSERTED FROM TPL_EXPORT -->
-	</tbody>
+        <thead>
+        <tr>
+            <th>&nbsp;</th>
+            <th>{% trans "Name" %}</th>
+            <th>{% trans "Queue Time" %}</th>
+            <th>{% trans "Last Download" %}</th>
+            <th>{% trans "Size" %}</th>
+            <th>{% trans "Link" %}</th>
+            <th>{% trans "Actions" %}</th>
+        </tr>
+        </thead>
 
-</table>
+        <tbody id="export_list_holder">
+        <!-- CONTENT INSERTED FROM JS -->
+        </tbody>
+
+    </table>
 
 {% endblock %}
 
 {% block sidebar %}
-{% include "exporter/_export_list_sidebar.html" %}
+    {% include "exporter/_export_list_sidebar.html" %}
 {% endblock %}
