--- a/website/site-static/css/screen.css
+++ b/website/site-static/css/screen.css
@@ -14577,60 +14577,60 @@ span.dim {
 /* Exporter styles
  */
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\000037}}
+div.listview.export thead th {
+  background-color: white;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000311}}
 div.listview.export [class^="visible-while-"], div.listview.export [class*=" visible-while-"] {
   display: none;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000313}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000317}}
 div.listview.export .item.init .visible-while-init {
   display: inline-block;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000318}}
-div.listview.export .item.done td {
-  background-color: #f3f0fb;
-}
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000320}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000324}}
 div.listview.export .item.done .visible-while-done {
   display: inline-block;
   color: #6633cc;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000325}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000329}}
 div.listview.export .item.downloaded td {
   background-color: #ddffd9;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000327}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000331}}
 div.listview.export .item.downloaded .visible-while-downloaded {
   display: inline-block;
   color: #00bb00;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000332}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000336}}
 div.listview.export .item.ready .visible-while-ready {
   display: inline-block;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000336}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000340}}
 div.listview.export .item.progress .visible-while-progress {
   display: inline-block;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000340}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000344}}
 div.listview.export .item.error td {
   background-color: #ffeed4;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000342}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000346}}
 div.listview.export .item.error .visible-while-error {
   display: inline-block;
   color: #ff743e;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000351}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000355}}
 div.listview.export .item .action.download a {
   color: #a5a5a5;
   cursor: wait;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000356}}
-div.listview.export .item.done .action.download a {
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000361}}
+div.listview.export .item.done .action.download a, div.listview.export .item.downloaded .action.download a {
   color: #6633cc;
   cursor: pointer;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000365}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/ohrstrom\/Documents\/Code\/openbroadcast\.ch\/website\/site-static\/sass\/apps\/_exporter\.sass}line{font-family:\0000370}}
 .icon-pulse {
   -webkit-animation: pulsate-b 1s;
   -webkit-animation-iteration-count: infinite;
@@ -14638,35 +14638,35 @@ div.listview.export .item.done .action.download a {
 }
 
 @-webkit-keyframes pulsate-b {
-  /* line 71, ../sass/apps/_exporter.sass */
+  /* line 76, ../sass/apps/_exporter.sass */
   0% {
     opacity: 1;
   }
 
-  /* line 73, ../sass/apps/_exporter.sass */
+  /* line 78, ../sass/apps/_exporter.sass */
   50% {
     opacity: 0.2;
   }
 
-  /* line 75, ../sass/apps/_exporter.sass */
+  /* line 80, ../sass/apps/_exporter.sass */
   100% {
     opacity: 1;
   }
 }
 
 @-webkit-keyframes pulsate-a {
-  /* line 79, ../sass/apps/_exporter.sass */
+  /* line 84, ../sass/apps/_exporter.sass */
   0% {
     -webkit-transform: scale(0.1, 0.1);
     opacity: 0;
   }
 
-  /* line 82, ../sass/apps/_exporter.sass */
+  /* line 87, ../sass/apps/_exporter.sass */
   50% {
     opacity: 1;
   }
 
-  /* line 84, ../sass/apps/_exporter.sass */
+  /* line 89, ../sass/apps/_exporter.sass */
   100% {
     webkit-transform: scale(1.2, 1.2);
     opacity: 0;
