--- a/website/site-static/sass/_asite.sass
+++ b/website/site-static/sass/_asite.sass
@@ -13,7 +13,7 @@
 @import element/element
 @import element/sidebar
 @import element/search
-@import element/pplayer_inline
+@import element/aplayer_inline
 @import element/cms
 
 @import element/addons 
