--- a/website/apps/aplayer/templates/aplayer/tpl_screen.html
+++ b/website/apps/aplayer/templates/aplayer/tpl_screen.html
@@ -1,14 +1,14 @@
 <div class="row-fluid aplayer-information">
-	<div class="span8 information">
-		<div class="padded-x padded-y">
-			<h2>
-				<a class="parent_link" href="{{object.release.absolute_url}}">{{ object.release.name }}</a>
-				
-				{{#object.release.releasedate}}
-				<small> {{ object.release.releasedate }}</small>
-				{{/object.release.releasedate}}
-				
-				<!--
+    <div class="span8 information">
+        <div class="padded-x padded-y">
+            <h2>
+                <a class="parent_link" href="{{ object.release.absolute_url }}">{{ object.release.name }}</a>
+
+                {{#object.release.releasedate}}
+                <small> {{ object.release.releasedate }}</small>
+                {{/object.release.releasedate}}
+
+                <!--
 				{{#object.release.catalognumber}}
 				<small> {{ object.release.catalognumber }}</small>
 				{{/object.release.catalognumber}}
@@ -17,100 +17,90 @@
 				{{ object.release.label.name }}
 				{{/object.release.label}}
 				-->
-			</h2>
-			<h1>{{ object.name }}</h1>
-			<h2><a class="parent_link" href="{{object.artist.absolute_url}}">{{ object.artist.name }}</a></h2>
-		</div>
-	</div>
+            </h2>
+            <h1>{{ object.name }}</h1>
 
-	<div class="span4 image">
-		<div class="padded-x padded-y">
+            <h2><a class="parent_link" href="{{ object.artist.absolute_url }}">{{ object.artist.name }}</a></h2>
+        </div>
+    </div>
 
-			{{#object.images}}
-			<img class=" pull-right" id="" src="{{.}}">
-			{{/object.images}}
+    <div class="span4 image">
+        <div class="padded-x padded-y">
 
-		</div>
-	</div>
+            {{#object.images}}
+            <img class=" pull-right" id="" src="{{.}}">
+            {{/object.images}}
+
+        </div>
+    </div>
 
 </div>
 
 <div class="row-fluid aplayer-progress" id="progress_bar">
-	<!--
-	<div class="time time-current">
-		<span>00:00</span>
-	</div>
-	-->
-	
-	<!--
+    <!--
+    <div class="time time-current">
+        <span>00:00</span>
+    </div>
+    -->
+
+    <!--
 	<div class="indicator {{#object.waveform_image}}has-waveform{{/object.waveform_image}}" {{#object.waveform_image}}style="background-image: url({{object.waveform_image}});"{{/object.waveform_image}}>
 		<div class="wrapper">
 			<div class="inner">&nbsp;</div>
 		</div>
 	</div>
 	-->
-	
-	<!-- main wrapper -->
-	<div class="indicator playhead hoverable">
-		
-		<!-- background layer (for hover/active/etc ? ) -->
-		<div class="background">
-			
-			<!-- holder for indicator (animated transparent png-24 bg.image) -->
-			<div class="indicator">
-				
-				<!-- holder for handler (animated transparent png-24 bg.image) -->
-				<div class="handler">
-					
-					<!-- actual waveform (transparent inner) -->
-					<div class="waveform">
-						
-						<img data-href="{{object.waveform_image}}" src="{{object.waveform_image}}" style="width: 100%; height: 100%" /></img>
-						
-					</div>
-					
-				</div>
-				
-			</div>
-			
-		</div>
-	
-	
-	
-	
-	
-	
-	
-	<!--
-	<div class="time time-total">
-		<span>00:00</span>
-	</div>
-	-->
 
-	<div class="clear"></div>
-</div>
+    <!-- main wrapper -->
+    <div class="indicator playhead hoverable">
 
-<div class="row-fluid aplayer-controls">
-	<div class="span6">
-		<ul class="horizontal unstyled">
+        <!-- background layer (for hover/active/etc ? ) -->
+        <div class="background">
 
-			<li>
-				<a href="#prev" title="Previous"> <i class="icon-step-backward"></i> </a>
-			</li>
-			
-			<li class="hidden-while-paused">
-				<a href="#pause" title="Stop"> <i class="icon-pause"></i> </a>
-			</li>
-			<li class="hidden-while-playing hidden-while-buffering">
-				<a href="#play" title="Play"> <i class="icon-play"></i> </a>
-			</li>
-			
-			<li>
-				<a href="#next" title="Next"> <i class="icon-step-forward"></i> </a>
-			</li>
+            <!-- holder for indicator (animated transparent png-24 bg.image) -->
+            <div class="indicator">
 
-		</ul>
-	</div>
+                <!-- holder for handler (animated transparent png-24 bg.image) -->
+                <div class="handler">
 
-</div>
+                    <!-- actual waveform (transparent inner) -->
+                    <div class="waveform">
+
+                        <img data-href="{{ object.waveform_image }}" src="{{ object.waveform_image }}"
+                             style="width: 100%; height: 100%"/></img>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="clear"></div>
+    </div>
+
+    <div class="row-fluid aplayer-controls">
+        <div class="span6">
+            <ul class="horizontal unstyled">
+
+                <li>
+                    <a href="#prev" title="Previous"> <i class="icon-step-backward"></i> </a>
+                </li>
+
+                <li class="hidden-while-paused">
+                    <a href="#pause" title="Stop"> <i class="icon-pause"></i> </a>
+                </li>
+                <li class="hidden-while-playing hidden-while-buffering">
+                    <a href="#play" title="Play"> <i class="icon-play"></i> </a>
+                </li>
+
+                <li>
+                    <a href="#next" title="Next"> <i class="icon-step-forward"></i> </a>
+                </li>
+
+            </ul>
+        </div>
+
+    </div>
 
